@@ -4,7 +4,7 @@ Depends: ${misc:Depends}
 Provides: linux-kernel-headers
 Replaces: linux-kernel-headers
 Conflicts: linux-kernel-headers
-Multi-Arch: ${linux:Multi-Arch}
+Multi-Arch: same
 Description: Linux support headers for userspace development
  This package provides userspaces headers from the Linux kernel.  These headers
  are used by the installed headers for GNU libc and other system libraries.
