@@ -5,7 +5,7 @@ Provides: linux-source
 Depends: binutils, bzip2, ${misc:Depends}
 Recommends: libc6-dev | libc-dev, gcc, make
 Suggests: libncurses-dev | ncurses-dev, libqt4-dev, pkg-config
-Multi-Arch: ${linux:Multi-Arch}
+Multi-Arch: foreign
 Description: Linux kernel source for version @version@ with Debian patches
  This package provides source code for the Linux kernel version @version@.
  This source closely tracks official Linux kernel releases.  Debian's
@@ -17,7 +17,7 @@ Package: linux-doc-@version@
 Architecture: all
 Depends: ${misc:Depends}
 Section: doc
-Multi-Arch: ${linux:Multi-Arch}
+Multi-Arch: foreign
 Description: Linux kernel specific documentation for version @version@
  This package provides the various README files and HTML documentation for
  the Linux kernel version @version@.  Plenty of information, including the
@@ -33,7 +33,7 @@ Section: doc
 Provides: linux-manual
 Conflicts: linux-manual
 Replaces: linux-manual
-Multi-Arch: ${linux:Multi-Arch}
+Multi-Arch: foreign
 Description: Linux kernel API manual pages for version @version@
  This package provides the Kernel Hacker's Guide in the form of
  manual pages, describing the kernel API functions.  They
@@ -48,7 +48,7 @@ Package: linux-support-@abiname@
 Architecture: all
 Section: devel
 Depends: ${python:Depends}, ${misc:Depends}
-Multi-Arch: ${linux:Multi-Arch}
+Multi-Arch: foreign
 Description: Support files for Linux @upstreamversion@
  This package provides support files for the Linux kernel build,
  e.g. scripts to handle ABI information and for generation of
