@@ -15,6 +15,7 @@ linux (3.10-1~exp1) UNRELEASED; urgency=low
   * [x86] efivars: Reenable 'paranoid' size check by default, as it should
     no longer have false positives
   * debian/patches: Reorder and group patches in series
+  * debian/rules.real: Remove support for pre-multiarch dpkg
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 01 Jul 2013 00:58:08 +0100
 
